--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "braintree-web-drop-in": "^1.44.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
