--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blotoutio/edgetag-sdk-js": "^1.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-turnstile": "^1.1.4"
